# National-Storage-Challenge

./: README.md  把心放在肚子里-作品设计文档.docx  把心放在肚子里-答辩.pptx
project_hw/: CMakeLists.txt  main.c  public.h
project_hw/algorithm/: algorithm.c  algorithm.h
project_hw/dataset/: case_10000_5.txt  case_10000_6.txt  case_10000_7.txt  case_10000_8.txt  case_10000_9.txt
